--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
 #dice:hover{
     background-color: rgb(88, 94, 82);
 }
+#diceBox{
+  display: flex;
+}
 
 #diceRoll{
   background-color: rgb(236, 228, 212);
@@ -22,6 +25,14 @@
   margin: 13px 26px 0px 95px;
   text-align: center;
 }
+#playerTurn{
+  width: 6%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: x-large;
+}
+
 #outPut{
     font-size: x-large;
 }
